--- a/pixo-ci/css/style-1.css
+++ b/pixo-ci/css/style-1.css
@@ -2800,7 +2800,7 @@ button {
     display: -ms-flexbox;
     display: flex;
     padding: 10px 15px;
-    `` font-weight: 400!important;
+    font-weight: 400!important;
     color: #001935;
     text-transform: capitalize;
     font-size: 16px;
